--- a/Features/Charts/UI/Pages/Charts.razor
+++ b/Features/Charts/UI/Pages/Charts.razor
@@ -10,7 +10,7 @@
 @inject ProtectedLocalStorage ProtectedLocalStore
 @inject IJSRuntime Js
 
-<PageTitle>Charts - ZOA Reference</PageTitle>
+<PageTitle>Charts - ZMA Reference</PageTitle>
 
 <SectionContent SectionName="sub-nav">
     <div class="bg-slate-900 flex items-center gap-2 px-2 py-0.5 flex-wrap">
