--- a/Features/Docs/UI/Pages/Prodcedures.razor
+++ b/Features/Docs/UI/Pages/Prodcedures.razor
@@ -7,7 +7,7 @@
 @inject IOptionsMonitor<AppSettings> AppSettings
 @inject ProtectedSessionStorage ProtectedSessionStore
 
-<PageTitle>Procedures - ZOA Reference</PageTitle>
+<PageTitle>Procedures - ZMA Reference</PageTitle>
 
 <div>
     <select @bind="_displayedPdfUrl" @bind:after="UpdateStoredUrl" class="p-2 bg-gray-700 text-gray-100 w-[600px]">
