--- a/Features/IcaoReference/UI/Pages/Codes.razor
+++ b/Features/IcaoReference/UI/Pages/Codes.razor
@@ -7,7 +7,7 @@
 @inject AirportRepository Airports
 @inject AircraftTypeRepository AircraftTypes
 
-<PageTitle>Codes - ZOA Reference</PageTitle>
+<PageTitle>Codes - ZMA Reference</PageTitle>
 
 
 <div class="flex flex-col text-s gap-8">
