--- a/Features/Scratchpads/UI/Pages/Scratchpads.razor
+++ b/Features/Scratchpads/UI/Pages/Scratchpads.razor
@@ -7,7 +7,7 @@
 @inject ScratchpadsRepository ScratchpadRepository
 @inject ProtectedSessionStorage ProtectedSessionStore
 
-<PageTitle>Scratchpads - ZOA Reference</PageTitle>
+<PageTitle>Scratchpads - ZMA Reference</PageTitle>
 
 <div class="ml-1 mb-4">
     <select @ref="_dropdown" @bind:get="_selectedFacilityId" @bind:set="UpdateSelectedFacility"
