--- a/Components/App.razor
+++ b/Components/App.razor
@@ -31,7 +31,7 @@
         };
     </script>
     <HeadOutlet/>
-    <title>ZOA Reference</title>
+    <title>ZMA Reference</title>
 </head>
 
 <body class="bg-slate-800 text-gray-100 min-h-screen">
