--- a/Features/DigitalAtis/UI/Pages/Atis.razor
+++ b/Features/DigitalAtis/UI/Pages/Atis.razor
@@ -5,7 +5,7 @@
 
 @inject DigitalAtisRepository AtisRepository;
 
-<PageTitle>ATIS - ZOA Reference</PageTitle>
+<PageTitle>ATIS - ZMA Reference</PageTitle>
 
 @if (_atisList is not null)
 {
@@ -37,7 +37,7 @@
 
 
 @code {
-    private readonly string[] _airports = { "KSFO", "KSJC", "KRNO", "KOAK", "KSMF" };
+    private readonly string[] _airports = { "KMIA", "KTPA", "KFLL", "KPBI", "KRSW" };
     private List<Models.Atis>? _atisList;
 
     private static string GetIssueTimeString(Models.Atis atis)
