--- a/Features/Routes/UI/Pages/Routes.razor
+++ b/Features/Routes/UI/Pages/Routes.razor
@@ -14,7 +14,7 @@
 @inject IJSRuntime Js
 @inject ProtectedSessionStorage ProtectedSessionStore
 
-<PageTitle>Routes - ZOA Reference</PageTitle>
+<PageTitle>Routes - ZMA Reference</PageTitle>
 
 
 <div class="flex flex-col text-s gap-8">
